--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": ">=7.1.0",
         "illuminate/database": "^5.5.0",
-        "doctrine/dbal": "~2.6.0"
+        "doctrine/dbal": "~2.6.0",
+        "twig/twig": "^2.7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^8"
